# paper_webui_rust

./: Cargo.toml  dev  index.html
core/: Cargo.toml
core/src/: error.rs  lib.rs
core/src/fs/: mod.rs
core/src/instance/: mod.rs
core/src/runner/: mod.rs
src/: lib.rs  main.rs
src/components/: counter.rs  mod.rs
src/core/: error.rs  mod.rs
src/core/instance/: mod.rs
src/core/runner/: mod.rs
src/routes/: about.rs  root.rs
webui/: Cargo.toml  README.md
webui/src/: app.rs
